# tcg-research

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.alternative  ML_WORKFLOW_GUIDE.md  POKEMON_FILTER_SYSTEM.md  PSA_API_SETUP_COMPLETE.md  README.md  alembic.ini  debug_docker.py  docker-compose.yml  docker-entrypoint-alt.sh  docker-entrypoint.sh  init-db.sql  main.py  next.config.js  package.json  pyproject.toml  railway.env.example  railway.json  render.yaml  requirements.txt  run_local.sh  simple_psa_test.py  start_server.py  tailwind.config.js  test_imports.py  test_psa_api.py  vercel.json
.claude/agents/: analyst.yaml  entity-resolver.yaml  ingestor.yaml  reporter.yaml  risk-policy.yaml
alembic/: env.py
app/: layout.tsx  page.tsx
app/api/tcg/scan/: route.ts
components/: RecommendationCard.tsx
examples/: pokemon_filter_usage.py
scripts/: init_db.py  setup.py
src/tcg_research/: __init__.py
src/tcg_research/api/: __init__.py  api_setup.py  ebay_setup.py  ebay_webhook.py  main.py  mock_data.py  psa_endpoints.py
src/tcg_research/core/: __init__.py  conservative_model.py  enhanced_entity_resolver.py  entity_resolver.py  features.py  ingestion.py  model.py  pokemon_filter.py
src/tcg_research/mcp/: __init__.py  ebay_browse.py  enhanced_ebay_browse.py  pricecharting.py  psa_api.py  tcgdx.py
src/tcg_research/models/: database.py
src/tcg_research/workflows/: ml_pipeline.py
tests/: test_enhanced_entity_resolver.py  test_pokemon_filter.py
