[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tcg-research"
version = "0.1.0"
description = "TCG market analysis and prediction system"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "psycopg2-binary>=2.9.7",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "pandas>=2.1.3",
    "numpy>=1.25.2",
    "catboost>=1.2.2",
    "scikit-learn>=1.3.2",
    "httpx>=0.25.2",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.1",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "S", "B", "A", "COM", "C4", "DTZ", "T20", "RET", "SIM", "ARG", "PTH", "PD", "PL", "NPY"]
ignore = ["ANN101", "ANN102", "S101", "ANN201", "B008", "DTZ003", "DTZ005", "ARG001"]

[tool.mypy]
python_version = "3.10"
strict = true